<resources>
    <string name="app_name">Discord Presence</string>
    <string name="version">Version: 0.1.0</string>
    <string name="menu1">Login</string>
    <string name="menu2">Connect</string>
    <string name="menu3">Presence</string>
    <string name="menu4">About</string>
    <string name="connect">Connect</string>
    <string name="login_description">Image to update as Discord User Profile</string>
    <string name="status">Status</string>
    <string name="rich_presence">Rich Presence</string>
    <string name="load">Load</string>
    <string name="more">Theme</string>
    <string name="discord_rpc">Discord Presence</string>
    <string name="connect_to_discord">Connect to Discord</string>
    <string name="logout">Logout and Restart</string>
    <string name="login">Login</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="text">This app is made for Educational purposes.\nThe creator of this app is not responsible for token leaks.\nThe developer doesn\'t collect data in any way, including tokens.\nUse it as your own risk.</string>
    <string name="creditsTo">This app is massively inspired by yzziK#3050\nCheck out his YouTube channel Vaibhav..</string>
    <string name="credits">Credits</string>
    <string name="about_me">About Me</string>
    <string name="about_me_text">I am a 17 years old (2004) student developing awesome Discord bots and apps in my free time.\nI enjoy doing this. I\'m moving to Finland in about 6 months (now: 1/6/2022) for my education.</string>
    <string name="info">Information</string>
    <string name="information">Version: 1.1.0\nGitHub: JasonBenfrin/Discord-Rich-Presence-Android</string>
    <string name="go_to_github">Go to Github</string>
    <string name="infoscrollview">InfoScrollView</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="show_all">Show All</string>
    <string name="since">Since</string>
    <string name="afk">AFK</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string-array name="status_types">
        <item>Online</item>
        <item>Idle</item>
        <item>Do not Disturb</item>
        <item>Invisible</item>
        <item>Offline</item>
    </string-array>
    <string name="notification_service_id">1</string>
    <string name="notification_service_name">Background Service</string>
    <string name="notification_service_description">Notification for background presence</string>
    <string name="notification_error_id">2</string>
    <string name="notification_error_name">Error Notifications</string>
    <string name="notification_error_description">Notification for background presence errors</string>
    <string name="activity">Activity</string>
    <string name="name">Name</string>
    <string name="created_at">Created At</string>
    <string name="url">URL</string>
    <string name="details">Details</string>
    <string name="emoji_name">Emoji Name</string>
    <string name="emoji_id">Emoji Id</string>
    <string name="animated">Emoji Animated</string>
    <string name="timestamp_start">Timestamp Start</string>
    <string name="timestamp_end">Timestamp End</string>
    <string name="application_id">Application Id</string>
    <string name="party_state">Party State</string>
    <string name="party_id">Party Id</string>
    <string name="party_size_current">Party Size Current</string>
    <string name="party_size_max">Party Size Max</string>
    <string name="large_image_url">Large Image URL</string>
    <string name="large_image_text">Large Image Text</string>
    <string name="small_image_url">Small Image URL</string>
    <string name="small_image_text">Small Image Text</string>
    <string name="join_secret">Join Secret</string>
    <string name="match_secret">Match Secret</string>
    <string name="spectate_secret">Spectate Secret</string>
    <string name="instance">Instance</string>
    <string name="button_1_label">Button 1 Label</string>
    <string name="button_2_label">Button 2 Label</string>
    <string name="button_1_url">Button 1 URL</string>
    <string name="button_2_url">Button 2 URL</string>
    <string name="view_log">View Log</string>
    <string name="no_log_here">No Log here</string>
    <string name="save_current">Save Current</string>
    <string name="activity_flags">Activity Flags</string>
    <string-array name="activity_types">
        <item>Playing</item>
        <item>Streaming</item>
        <item>Listening</item>
        <item>Watching</item>
        <item>Custom</item>
        <item>Competing</item>
    </string-array>
    <attr name="hollowButtonStyle" format="reference"/>
</resources>